--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
-agp = "8.5.0"
+agp = "8.5.0-beta01"
 barcodeScanning = "17.2.0"
-cameraCore = "1.3.3"
+cameraCore = "1.3.4"
 cameraMlkitVision = "1.4.0-beta02"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
+junitVersion = "1.2.1"
+espressoCore = "3.6.1"
 appcompat = "1.7.0"
 lottie = "6.4.0"
 material = "1.12.0"
@@ -15,8 +15,8 @@ playServicesLocation = "21.3.0"
 playServicesMlkitBarcodeScanning = "18.3.0"
 googleGmsGoogleServices = "4.4.2"
 firebaseAuth = "23.0.0"
-navigationFragment = "2.6.0"
-navigationUi = "2.6.0"
+navigationFragment = "2.7.7"
+navigationUi = "2.7.7"
 
 [libraries]
 barcode-scanning = { module = "com.google.mlkit:barcode-scanning", version.ref = "barcodeScanning" }
